# brazil-amazon-deforestation

./: README.md  pyproject.toml
config/: scrape.yaml
data/clean/: municipality_neighbors.json
data/shapefiles/aldeias/: aldeias_pontosPoint.shp  aldeias_pontosPoint.shx
data/shapefiles/municipalities_amazon/: Sedes_Mun_Amazonia_Legal_2022.dbf  Sedes_Mun_Amazonia_Legal_2022.shp  Sedes_Mun_Amazonia_Legal_2022.shx  municipalities_legal_amazon.dbf  municipalities_legal_amazon.shx
data/shapefiles/terras_indigenas/: tis_poligonais_portariasPolygon.dbf  tis_poligonais_portariasPolygon.shx
scripts/scrape/: get_areas.py  get_defor.py
