[project]
name = "brazil-amazon-deforestation"
version = "0.1.0"
description = ""
authors = [
    {name = "gabrielsgaspar",email = "gabrielsgaspar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "scipy (>=1.16.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
